Fix layout on mobile devices
Fixes #1

--- a/themes/kineo/assets/main.scss
+++ b/themes/kineo/assets/main.scss
@@ -5,7 +5,9 @@
 
 html,body {
     margin: 0px;
-    // height: 100%;
+    @include phone {
+        max-width: 100%;
+    }
 }
 
 html {
@@ -24,6 +26,7 @@ body {
 
     @include phone {
         align-items: flex-start;
+        width: 100vw;
     }
 }
 
@@ -35,7 +38,9 @@ body {
 
     @include phone {
         margin-top: 40px;
-        margin: 40px 20px 0px 20px;
+        // margin: 40px 20px 0px 20px;
+        width: calc(100vw - 24px);
+        padding: 0px 12px;
     }
 }
 
@@ -48,6 +53,9 @@ body {
 
 img {
     margin: auto;
+    @include phone {
+        max-width: 100%;
+    }
 }
 
 footer {
@@ -88,6 +96,10 @@ footer {
         a {
             margin-left: 6px;
         }
+
+        @include phone {
+            align-self: center;
+        }
     }
 }
 
@@ -95,4 +107,11 @@ footer {
     width: 512px;
     display: flex;
     justify-content: space-between;
+
+    @include phone {
+        width: calc(100vw - 24px);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
